Updated website design: improved contact section, added footer, fixed icons

--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -7,14 +7,16 @@
 
   <!-- CSS File -->
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="logo.png">
+  <link rel="icon" type="image/png" href="Logo.png">
 </head>
 <body>
+
+
 
   <!-- NAVBAR -->
   <nav>
     <div id="logo">
-      <img src="logo.png" alt="TravelBloom Logo" width="40" height="40">
+      <img src="images/Logo.png" alt="TravelBloom Logo" width="40" height="40">
       <h2 class="name">TravelBloom</h2>
     </div>
 
@@ -44,45 +46,64 @@
     </div>
   </nav>
 
-  <!-- MAIN / HOME SECTION -->
+  
+  <div class="background-fixed"></div> <!-- stays fixed in place -->
+  <div class="background-overlay"></div>
+
+     <!-- MAIN / HOME SECTION -->
   <section id="Home" class="MainSection">
     <div class="Homecontent">
 
       <!-- LEFT SOCIAL ICONS -->
       <div class="sociallinks">
+        <div class="verticalline"></div>
         <div class="links">
           <a href="#" class="linkslogo"><i class="fa-brands fa-twitter"></i></a>
           <a href="#" class="linkslogo"><i class="fa-brands fa-facebook"></i></a>
           <a href="#" class="linkslogo"><i class="fa-brands fa-instagram"></i></a>
           <a href="#" class="linkslogo"><i class="fa-brands fa-youtube"></i></a>
         </div>
-        <div class="verticalline"></div>
+        
       </div>
 
       <!-- MAIN TEXT CONTENT -->
       <div class="mainhomecontent">
-        <h1 class="homesectionheader">Discover Beautiful Destinations</h1>
+        <h1 class="homesectionheader">Discover...<br> Beautiful Destinations</h1>
         <p class="homesectiondescriptoin">
-          Explore amazing beaches, temples, and cities around the world.  
-          Plan your next adventure today with TravelBloom.
+          Explore amazing beaches, temples, and cities around the world.<br>  
+          Plan your next adventure today with TravelBloom.<br>
+          Explore breathtaking beaches, ancient temples, and vibrant cities from every corner of the globe.<br> Whether you’re dreaming of relaxing on sun-kissed shores, uncovering the secrets of centuries-old shrines,<br> or wandering through bustling urban landscapes,<br> TravelBloom helps you craft the perfect getaway. Discover hidden gems, plan unforgettable experiences,<br> and make your next adventure truly extraordinary with TravelBloom
+        <br>
+        <br>
         </p>
         <button class="bookbtn">Book Now</button>
       </div>
     </div>
   </section>
-
-  <!-- ABOUT SECTION -->
+  <!---About Section-->
   <section id="About">
-    <h2 class="aboutusheader">About Us</h2>
-    <p class="aboutustxt">
-      TravelBloom is your personalized travel companion. We provide curated recommendations
-      for breathtaking destinations across the globe. Our goal is to help you explore,
-      discover, and enjoy the beauty of our world.
-    </p>
-  </section>
+     <section id="About">
+  <h2 class="aboutusheader">About Us</h2>
 
-  <!-- CONTACT SECTION -->
-  <section id="Contactus">
+  <h1 class="aboutusmain">Discover the World with TravelBloom</h1>
+
+  <p class="aboutustxt">
+    TravelBloom is your personalized travel companion. We provide curated recommendations
+    for breathtaking destinations across the globe.<br>
+    Our goal is to help you explore, discover,<br>
+    and enjoy the beauty of our world.
+    Explore breathtaking beaches, ancient temples,<br>
+    and vibrant cities from every corner of the globe.<br>
+    Whether you’re dreaming of relaxing on sun-kissed shores, uncovering the secrets of centuries-old shrines,<br>
+    or wandering through bustling urban landscapes, TravelBloom helps you craft the perfect getaway.<br>
+    Discover hidden gems, plan unforgettable experiences,<br>
+    and make your next adventure truly extraordinary with TravelBloom.
+  </p>
+</section>
+  
+
+  <!--Contact Section-->
+    <section id="Contactus">
     <h2 class="contactustittle">Contact Us</h2>
     <div class="formsection">
       <form>
@@ -99,11 +120,11 @@
       </form>
     </div>
   </section>
-
-  <!-- SCRIPT FILE -->
+  
+ <!-- SCRIPT FILE -->
   <script src="travel_recommendation.js"></script>
   <!-- Font Awesome for icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 </body>
 </html>
